--- a/_posts/2021-09-13-training.md
+++ b/_posts/2021-09-13-training.md
@@ -2,15 +2,24 @@
 layout: post
 title:  "Training People"
 date:   2021-09-13 13:22:18 +0000
+category: business
+tags: arrange time
 ---
 
 # Preparation
-Maybe you're already years into your business, maybe just starting, but the time to prepare is now. Unless intend to stay small, and I'm not knocking that, you need a plan, a strategy, for scale.
+Maybe you're already years into your business, maybe just starting, but the time to prepare is now. Unless you intend keep your business small, and I'm not knocking that, you need a plan, a strategy, for scale.  
 
 ## People and Training
-The one thing you can't duplicate is you. Lots of talk around entrepreneurship is how you spend your time. Whether the strategy is Eisenhower boxes or something else, things that need to be done may still overwhelm the amount of time you have in a day. That means that greater success is available if you can train people to do what you do.
+The one thing you can't duplicate is __you__. Lots of talk around entrepreneurship is how you spend __your time__. Whether your strategy is [Eisenhower boxes](https://en.wikipedia.org/wiki/Priority_Matrix) or something else, things that __need to be done__ may still overwhelm the amount of time __you__ have in a day. That means that greater success is available if you can __train other people__ to do what you do.  
 
 ## Time Efficient Training
-You already know that time is the one thing you can't spare. Hiring a new person and training them takes your time. You can either use a crystal ball and hire early enough or you end up training when you really can't afford to spen the time.
+You already know that time is the one thing you can't spare. Hiring a new person and training them takes your time. If you have the cashflow available, you can hire early enough that you have time for training, otherwise, you end up training when you really can't afford to spend the time.  
 
-Minimize your training time. When you write your breadcrumbs, leave an extra sentence, or a few more words than you need. Just one minute, or a few seconds worth, of extra breadcrumb in your code can cut training time drastically. Teach your new hires that you leave breadcrumbs in the readme and they'll start looking there first before asking you the next question. Links to quickstarts on the tools you're using, notes on your class names or architecture, business philosophy and market strategy, even when these things aren't pretty and polished they save time.
+Minimize your training time. When you write your [breadcrumbs](/breadcrumbs/), leave an extra sentence, or a few more words than you need. Just one minute, __or a few seconds worth__, of extra breadcrumb in your code can cut training time drastically. Teach and remind your new hires that you leave breadcrumbs in the readme; they'll start looking there first before asking you the next question. Include notes on things like the following:  
+* links to quickstarts on the tools you're using,  
+* class naming conventions,  
+* architecture,  
+* domain terms,  
+* business philosophy and market strategy,  
+
+Even when these things aren't pretty and polished they save time by training the people who follow you.  
