scanning more posts

--- a/_posts/2021-09-17-blogging.md
+++ b/_posts/2021-09-17-blogging.md
@@ -2,18 +2,20 @@
 layout: post
 title:  "Blogging"
 date:   2021-09-17 19:43:11 +0000
+category: business
+tags: time people
 ---
 
 # Weblog, Stardate 3748.289
-I'm on the fence about a blog. So far, I'm thinking that if I'm just grinding out blog entries then this is a terrible waste of time and I'll hate it really soon. So, here are some topics that I'm actually interested in and plan to start digging into and blogging about as I go.
+I'm on the fence about a blog. So far, I'm thinking that if I'm just grinding out blog entries then this is a terrible waste of time and I'll hate it really soon. So, here are some topics that I'm actually interested in and plan to start digging into and blogging about as I go.  
 
 ## Games
 I'm into board games. I enjoy having people round the table and laughing and thinking. Strategy games, word games, interesting, difficult, absorbing, games. The phenomenon of voice chat with online games makes sense to me because of the people aspect that I like so much about board games. But also, I'm really not into party games. Overly simplistic, predictable, click bait, games make me ill. If it's not fun, unless... then it's not fun. When it comes to computer games, I like the same things. Thought provoking, surprising, complex, all drag me in.  
 
 ## Business
-Organizations of people are also of special interest to me. Watching people, watching interactions, watching emergent complexity and structure grow out of the simple interactions of people is fascinating. Watching businesses grow, how and when people start businesses, when people decide to take businesses in certain directions, again fascinating. I've spent a lot of time in companies in late stage startup or early stage growth, watching decisions change or watching decisions fail to change in this transition period. More on this later for sure.
+Organizations of people are also of special interest to me. Watching people, watching interactions, watching emergent complexity and structure grow out of the simple interactions of people is fascinating. Watching businesses grow, how and when people start businesses, when people decide to take businesses in certain directions, again fascinating. I've spent a lot of time in companies in late stage startup or early stage growth, watching decisions change or watching decisions fail to change in this transition period. More on this later for sure.  
 
 ## Efficiency, Leverage, Process, Leadership, Motivation, Training
-Both games and business love and need strategy. Understanding people, and what they want, and how they learn, greatly enhances human interactions and takes a group of people from strangers to unbeatable teams. Studying what people actually do, and why it doesn't match the stated process, helps discover motivations and provides leverage for mutual benefit. Win-win situations lying around waiting for discovery are one of the best ways to improve efficiency, motivation, team spirit, and engagement.
+Both games and business love and need strategy. Understanding people, and what they want, and how they learn, greatly enhances human interactions and takes a group of people from strangers to unbeatable teams. Studying what people actually do, and why it doesn't match the stated process, helps discover motivations and provides leverage for mutual benefit. Win-win situations lying around waiting for discovery are one of the best ways to improve efficiency, motivation, team spirit, and engagement.  
 
-Those things, watching people and making deals, are time consuming. Therefore, I also spend a lot of time on personal and process efficiency. The more time I can save and use on the important things, the more actual important things I can get done. Thus, a strategy is born. Work smart and efficient to save time and spend it on the people; they're what matter.
+Those things, watching people and making deals, are time consuming. Therefore, I also spend a lot of time on personal and process efficiency. The more time I can save and use on the important things, the more actual important things I can get done. Thus, a strategy is born. Work smart and efficient to save time and spend it on the people; they're what matter.  
