--- a/_posts/2021-09-18-testing.md
+++ b/_posts/2021-09-18-testing.md
@@ -2,15 +2,19 @@
 layout: post
 title:  "Testing"
 date:   2021-09-18 11:31:56 +0000
+category: business
+tags: time arrange people testing
 ---
 
 # Breadcrumb Efficiency
-Breadcrumbs are really about a special piece of efficiency, "Don't lose your place." The people are what matters, so interruptions are extremely important. Someone, whom I am certain that you have lovingly trained and lavishly empowered and given responsibility and power to match, needs your help! Help them!
+Breadcrumbs are really about a special piece of efficiency, **"Don't lose your place."** The people are what matters, so interruptions are extremely important. Someone, whom I am certain that you have lovingly trained and lavishly empowered and given responsibility and power to match, needs your help! Help them!  
 
 At the same time, leave off your work with a note, or a bookmark, or a broken bit of code (locally, you don't have to check it in), some breadcrumb that puts you back where you were when you come back after an important, but long, detour. Sometimes, writing the notes first is necessary, call it a checklist, a wireframe, a design, or a plan, whatever. As long as you capture that state, or at least threads, leads, back into it, then you lose less time as you come back to it. Deep work is exceedingly important. That's why the plan and breakdown of it is so critical. More of the deep work is committed into your files or notebook, and you don't have to rely as much on your [own brain](https://en.wikipedia.org/wiki/Method_of_loci) or other mnemonic devices.
 
 ## Testing Efficiency
-Similarly, at least in software development, tests are about efficiency, "Capture gains" or "don't backslide." This is one of the first places I'll be headed with the game programming tutorials. The worst time losses are the ones where you're rediscovering the wheel you've already invented. You're going to break things. With tests that you're running constantly, you'll know much sooner that something is broken and be far more likely to know what it was that you just did to break it. Likewise, though writing tests does slow down the first thousand lines of code, it puts more knowledge into your files, into your code, so that you don't have to have the first thousand lines of code in mind when you write the ten thousandth or hundred thousandth. Make writing code easier for longer, in more complex larger bodies of work. Write Tests.
+Similarly, at least in software development, tests are about efficiency, "Capture gains" or "don't backslide." This is one of the first places I'll be headed with the game programming tutorials. The worst time losses are the ones where you're rediscovering the wheel you've already invented. You're going to break things. With tests that you're running constantly, you'll know much sooner that something is broken and be far more likely to know [what it was that you just did to break it](stc). Likewise, though writing tests does slow down the first thousand lines of code, it puts more knowledge into your files, into your code, so that you don't have to have the first thousand lines of code in mind when you write the ten thousandth or hundred thousandth. Make writing code easier for longer, in more complex larger bodies of work. Write Tests.  
 
 ## Tests as Training Material
 Now here's the piling on. Getting more knowledge out of your head and into your code and files makes it more accessible to other programmers when you hire and grow. Even if you're the genius that doesn't need tests to write a million lines of code that work well together, if you have plans to expand your company write tests to train your employees. Breaking tests rather than breaking functionality affords learning opportunities as well as stability in your project and product. And the training doesn't take up your time!  
+
+[stc]: https://martinfowler.com/bliki/SelfTestingCode.html
