fixing kramdown ref link syntax

--- a/_posts/2021-09-15-iterate.md
+++ b/_posts/2021-09-15-iterate.md
@@ -10,7 +10,7 @@ tags: arrange time design people
 We never end up with enough breadcrumbs for __training__. Part of the reason is that we still can't duplicate ourselves. Other people don't have our experience, our thought process, our frame of mind, and the breadcrumbs we left need more detail, more links, more words, etc.  
 
 ## Strategy
-One thing that your next new hire can do right from the start is __expand the breadcrumbs__. If each person you train adds to the breadcrumbs, pretty soon someone might call them documentation, eventually, maybe even training materials. Use the "less efficient" new hire time on writing down what you're teaching them. Review the product (Pull Requests are great here) to confirm understanding and help increase clarity on jargon and company knowledge. Pay special attention to your domain dictionary or [Ubiquitous Language](ul) terms in order to start off everyone on the right footing and talking about things the same way. And, now, the next hire starts a step closer to a training program than the last.  
+One thing that your next new hire can do right from the start is __expand the breadcrumbs__. If each person you train adds to the breadcrumbs, pretty soon someone might call them documentation, eventually, maybe even training materials. Use the "less efficient" new hire time on writing down what you're teaching them. Review the product (Pull Requests are great here) to confirm understanding and help increase clarity on jargon and company knowledge. Pay special attention to your domain dictionary or [Ubiquitous Language][ul] terms in order to start off everyone on the right footing and talking about things the same way. And, now, the next hire starts a step closer to a training program than the last.  
 
 ## Iterate
 For each new hire, set the last new hire as the trainer with the current new hire updating the training materials. You are less time-involved because your knowledge is alreay being documented __and__ your seasoned employees step into more responsibility naturally because they are the recent experts in the documentation.  You should still review the Pull Request changes because your training materials are so important. Watch changes to your training documentation, readme files, and other breadcrumbs. These save you the most time in your company of any tool available and there's no way to buy them from a vendor.  
