--- a/_posts/2021-09-19-research.md
+++ b/_posts/2021-09-19-research.md
@@ -7,7 +7,7 @@ tags: learning time arrange people
 ---
 
 # Tangential Learning
-Kind of a funny thing rolling through thoughts for posts, and needing to get off the blather train. I'll have to go looking again for the term I found before. I linked to [method of loci](loci) but I'd really been looking for a concept that has to do with extending our knowledge, memory and concepts, into a physical medium. I can't remember it right now, but that sort of brings me to the point.  
+Kind of a funny thing rolling through thoughts for posts, and needing to get off the blather train. I'll have to go looking again for the term I found before. I linked to [method of loci][loci] but I'd really been looking for a concept that has to do with extending our knowledge, memory and concepts, into a physical medium. I can't remember it right now, but that sort of brings me to the point.  
 
 ## Augment your Brain
 Yes. You're smart. And Hire smart people, duh, because you're probably not smarter than a pile of smart people all working on the same thing. But even then, train yourself and the people around you, to use tools to offload memories, reminders, processing power, research time, etc. If you can make tasks as simple, as easy, as possible, then you can tackle more complex tasks overall. I know you're thinking, "Not breadcrumbs again!" Not this time, but it would be a good example.  
@@ -17,7 +17,7 @@ __Reminders.__ Yes, a prioritized task list, top two or three things you need to
 __Outlines.__ Yes, a wireframe for the page design you're working on. Yes, a skeleton draft of the document you're composing. Yes, a bullet list of the requirements and architecture of the design you're working on. Get interrupted the eighth time today and you drop a mouseover on the page, forget the fourth point that closed the deal in your presentation, and code yourself into a corner that you knew to avoid this morning. (I guess this is sort of breadcrumbs again.)  
 
 ## Save a Little Time for Research
-You're always learning, but do you take some time to research thinking? Or organization? Or psychology? Or motivational speaking? Reasearch some tangential things. Not necessarily random things, but things that are loosly related to your business, or loosely related to learning, or language, something. It can always be a conversation starter, "I was just reading about...." But it might also be something you can use. Maybe you don't need to be an expert on [olivine](xkcd) but there are things that might make your life easier like [Eisenhower matrix](matrix) and [Objectives and Key Results](okr). It's true that you've got real work to do, and you need your concentration time, but taking a little time to cultivate connections to related ideas can transform your work like origami transforms paper.  
+You're always learning, but do you take some time to research thinking? Or organization? Or psychology? Or motivational speaking? Reasearch some tangential things. Not necessarily random things, but things that are loosly related to your business, or loosely related to learning, or language, something. It can always be a conversation starter, "I was just reading about...." But it might also be something you can use. Maybe you don't need to be an expert on [olivine][xkcd] but there are things that might make your life easier like [Eisenhower matrix][matrix] and [Objectives and Key Results][okr]. It's true that you've got real work to do, and you need your concentration time, but taking a little time to cultivate connections to related ideas can transform your work like origami transforms paper.  
 
 [loci]: https://en.wikipedia.org/wiki/Method_of_loci
 [xkcd]: https://xkcd.com/2501/
