--- a/_posts/2021-09-20-the game.md
+++ b/_posts/2021-09-20-the game.md
@@ -7,13 +7,13 @@ tags: tutorial momentum project-pages
 ---
 
 # Roguelike Tutorial
-I'm finally starting to get down to the real project that I've had on my mind. I'm wanting to work on a roguelike game, and I'm wanting to do a tutorial that's a little different than most of the ones I've seen. I'm going to emphasize some good habits that I've been talking about like breadcrumbs, and testing, and I'll also probably tie in some other important items as I go. The point will be to create a long term sustainable project that enables and encourages [momentum](moment).
+I'm finally starting to get down to the real project that I've had on my mind. I'm wanting to work on a roguelike game, and I'm wanting to do a tutorial that's a little different than most of the ones I've seen. I'm going to emphasize some good habits that I've been talking about like breadcrumbs, and testing, and I'll also probably tie in some other important items as I go. The point will be to create a long term sustainable project that enables and encourages [momentum][moment].
 
 ## Tools
-I'll be using [GoRogue](gorogue) and [SadConsole](sadconsole) with a bridge to make them work together [nicely](helpers), probably. It's important to point out that there are [tutorials](ansiware) out [there](mark-james) for some of this already. I'll need to refresh my memory on these as I go, but the main point I'm aiming for has a different focus. Yes, still aiming for functional code, but also for method that keeps code functional and keeps development fast and reliable far into the future.  
+I'll be using [GoRogue][gorogue] and [SadConsole][sadconsole] with a bridge to make them work together [nicely][helpers], probably. It's important to point out that there are [tutorials][ansiware] out [there][mark-james] for some of this already. I'll need to refresh my memory on these as I go, but the main point I'm aiming for has a different focus. Yes, still aiming for functional code, but also for method that keeps code functional and keeps development fast and reliable far into the future.  
 
 ## Project GitHub Pages
-I think the next thing I'm getting ready to do is figure out some arrangement to get the GitHub Project Pages thing up and going. I'm thinking that I'd like to get the repository set up with the project website nested into the ```/docs``` folder and then to work around that folder with the real project structure. I think I saw that the project page can just be nestled into a subdomain off my user page so maybe I'll aim for [roguelike-tutorial.assumeforsimplicity.com](tutorial) or something equally plainly named.  
+I think the next thing I'm getting ready to do is figure out some arrangement to get the GitHub Project Pages thing up and going. I'm thinking that I'd like to get the repository set up with the project website nested into the ```/docs``` folder and then to work around that folder with the real project structure. I think I saw that the project page can just be nestled into a subdomain off my user page so maybe I'll aim for [roguelike-tutorial.assumeforsimplicity.com][tutorial] or something equally plainly named.  
 
 
 [moment]: https://projectmanager.com.au/managing-projects-with-momentum/
