finish post scanning

--- a/_posts/2021-10-09-oh-duh.md
+++ b/_posts/2021-10-09-oh-duh.md
@@ -2,13 +2,15 @@
 layout: post
 title:  "Oh Duh"
 date:   2021-10-09 09:11:34 +0000
+category: website
+tags: workflow actions pages cname
 ---
 
 # Simple
 After watching the settings keep_history and keep_files not bother keeping the CNAME file that I'd committed to ```gh-pages```, I double checked and clicked into my GitHub Pages settings and sure enough, with the CNAME file missing from the branch, my custom domain was gone from the settings. So, the force push thing is sort of the issue, but the real issue is no CNAME file. But, that means I just need Jekyll to copy my existing CNAME file to the destination folder, simple right?  
 
 ## Well, well, well
-I don't think I ever realized that the CNAME was a file that didn't get copied to the destination folder. I thought I'd read about the files just getting copied over if they weren't part of the excluded list, but probably like everything else, I sould stop and read all the documentation much more carefully, even if it's unclear, confusing, and conflicting. Ugh. The lucky thing is, this is a simple ask for Jekyll. There's an include tag to add in the ```_config.yml``` and after firing up ```bundle exec jekyll serve``` and checking the local build, I could now see CNAME in the ```_site``` folder so the same should happen with the action workflow. Simple.  
+I don't think I ever realized that the CNAME was a file that didn't get copied to the destination folder. I thought I'd read about the files just getting copied over if they weren't part of the excluded list, but probably like everything else, I sould stop and read all the documentation much more carefully, even if it's unclear, confusing, and conflicting. Ugh. The lucky thing is, this is a simple task for Jekyll. There's an include tag to add in the ```_config.yml``` and after firing up ```bundle exec jekyll serve``` and checking the local build, I could now see CNAME in the ```_site``` folder so the same should happen with the action workflow. Simple.  
 
 ## Over With
 Hopefully this is my last CI/CD hurdle for a while. I'm afraid I've declared victory falsely several times already and haven't hardly done any of the coding that I've really been trying to get around to. If it wasn't for the fact that I really do need the CI/CD part to work in order for me to bother with this project at all, and the fact that I'm sort of expecting to use this knowledge on about three more websites, I'd be really pretty discouraged. I'm kind of impressed that I'm feeling as good as I am and feeling like momentum is good. I guess I must have gotten the the __almost finished__ second wind with the same thought process as declaring victory and throwing a parade several times before the dragon is finally actually slain. Maybe this time we can actually put away the floats and costumes and be done with it.  
