--- a/_posts/2021-10-13-slowness.md
+++ b/_posts/2021-10-13-slowness.md
@@ -7,13 +7,13 @@ tags: time procrastinate plan
 ---
 
 # An Hour a Day
-I've mentioned before that my work schedule for this project runs about an hour a day. Well, cranking through the scnning of the blog posts isn't done yet. I'm fixing up a lot of things, consolidating ramble in posts into breadcrumbs lists, typo fixing, adding categories and tags, etc. Good stuff but not super exciting.  
+I've mentioned before that my work schedule for this project runs about an hour a day. Well, cranking through the scanning of the blog posts isn't done yet. I'm fixing up a lot of things, consolidating ramble in posts into breadcrumbs lists, typo fixing, adding categories and tags, etc. Good stuff but not super exciting.  
 
 ## Momentum
 Except for the fact that I'm about ten posts from the end, I'm getting a little frustrated. Morale and momentum being what they are, I wanted to be done with this grind improvement in an hour (one project work day) and not three-ish. I think if it would have looked like it was going to take longer I would have completely switched gears to a persistence pattern rather than a burst pattern.  
 
 ## Strategy
-While I usually like to just finish tasks, some are just too big or too boring to finish at a decent go. I might sound a little like a terrible focus day for an unmedicated ADHDer but three hours out of an eight hour work day isn't the same as three hours in one hour work days. Three hours suddenly starts to sound like almost a week, and for a "quick simple task" that is a drag on morale and momentum that might be tough to afford. So, rather than get bogged down, break up the work.  
+While I usually like to just finish tasks, some are just too big or too boring to finish at a decent go. I might sound a little like I'm just having a terrible focus day but three hours out of an eight hour work day isn't the same as three hours in one hour work days. Three hours suddenly starts to sound like almost a week, and for a "quick simple task" __that__ is a drag on morale and momentum that might be tough to afford. So, rather than get bogged down, break up the work.  
 
 ## Partitioning
 Breaking up the work in this case would probably look like doing the category and other work on one or two posts a night as a little slice of my hour of work. It might take a long time to get the whole task completed, but at least I'm also making progress on things that I actually care about while I make slow but constant progress on the task.  
